# falsify

./: Makefile  README.md  flake.nix  pyproject.toml
scripts/: gen_diagram.py  setup.sh
src/: falsify.py
src/falsify/: __init__.py  __main__.py  cli.py  console.py  doctor.py  fsm.py  observer.py  shell.py  types.py
tests/: test_agent_backend.py  test_observer.py  test_pr_sync.py  test_smoke.py
