[project]
name = "falsify"
version = "0.1.0"
description = "AI coding agent test loop for scientific hypothesis testing"
authors = [
    {name = "David",email = "david.nobles@sontric.org"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "allure-pytest (>=2.15.3,<3.0.0)",
    "graphviz (>=0.20)",
    "pytest (>=9.0.2,<10.0.0)",
    "transitions (>=0.9)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
